--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -10,7 +10,7 @@ jobs:
  
     steps:
     - uses: actions/checkout@v1
-#    - name: Build the Docker image
+##    - name: Build the Docker image
 #      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 
     - name: Publish to Registry
