--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,9 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+      - task: Docker@2
+        inputs:
+          containerRegistry: 'GitHub docker Package Registry'
+          repository: 'laurentkempe/dockerwebapi/dockerwebapi'
+          command: 'buildAndPush'
+          Dockerfile: '**/Dockerfile'
