--- a/.github/workflows/azure-aci-deploy.yml
+++ b/.github/workflows/azure-aci-deploy.yml
@@ -1,6 +1,11 @@
 name: Azure Container Instances CD
 
-on: [registry_package]
+on: 
+  registry_package:
+    action:
+      - updated
+    tags:
+      - latest
 
 jobs:
   deploy:
