--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,15 +1,10 @@
 name: Docker Image CI
-
 on: [push]
-
 jobs:
-
   build:
- 
     runs-on: ubuntu-16.04
- 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@master
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
@@ -17,4 +12,3 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         registry: docker.pkg.github.com
-        dockerfile: Dockerfile
