--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -6,9 +6,10 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: jerray/publish-docker-action@master
       with:
-        name: docker.pkg.github.com/laurentkempe/dockerwebapi/dockerwebapi
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         registry: docker.pkg.github.com
+        repository: laurentkempe/dockerwebapi 
+        auto_tag: true
