--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -19,5 +19,5 @@ jobs:
 
     - name: Push the image to Github Packages Repository
       run: |
-        docker login docker.pkg.github.com -u laurentkempe -p "${{ secrets.GITHUB_PACKAGE_REGISTRY_TOKEN }}"
+        docker login docker.pkg.github.com -u publisher -p "${{ secrets.GITHUB_PACKAGE_REGISTRY_TOKEN }}"
         docker push docker.pkg.github.com/laurentkempe/dockerwebapi/dockerwebapi:latest
