--- a/.github/workflows/azure-aci-deploy.yml
+++ b/.github/workflows/azure-aci-deploy.yml
@@ -11,6 +11,7 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     - run: |
+        az container delete --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --name dockerwebapi
         az container create --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --name dockerwebapi --image docker.pkg.github.com/laurentkempe/dockerwebapi/dockerwebapi:latest --registry-login-server docker.pkg.github.com --registry-username ${{ secrets.DOCKER_USERNAME }} --registry-password ${{ secrets.GITHUB_PACKAGE_REGISTRY_TOKEN }} --dns-name-label dockerwebapi --ports 80
  # Azure logout 
     - name: logout
